--- a/src/upage2.html
+++ b/src/upage2.html
@@ -7,6 +7,36 @@
     <link rel="stylesheet" href="output.css">
 </head>
 <body>
-
+    <div class="max-w-[1200px] m-auto">
+<header>
+<nav class="flex justify-around p-[20px]">
+    <img src="uimg/Logo (11).png" alt="">
+    <ul class="flex gap-[30px] font-bold text-[20px] hidden lg:flex">
+        <li>Доска объявлений</li>
+        <li class="bg-[#B3EECF]">Сервисный центр</li>
+        <li>Интернет-магазин Dily.ru</li>
+        <li>Скупка</li>
+    </ul>
+    <div class="p-[5px]">
+ <img class="w-[267px] h-[21px] hidden lg:flex" src="uimg/меню.png" alt="">
+ </div>
+ <svg class="lg:hidden" viewBox="0 0 100 80" width="40" height="40">
+  <rect width="100" height="20"></rect>
+  <rect y="30" width="100" height="20"></rect>
+  <rect y="60" width="100" height="20"></rect>
+</svg>
+</nav>
+<div class="bg-[#F7F7F7] p-8 flex justify-around items-center hidden lg:flex">
+  <div class="flex gap-8">
+    <img src="uimg/Frame 154.png" alt="">
+    <img src="uimg/Frame 156.png" alt="">
+  </div>
+  <div class="flex gap-5 items-center">
+    <input  class="w-[201px] h-[28px] rounded-[25px] border border-gray-400 px-4"  placeholder="Я хочу купить"  type="text" ><button class="w-[89px] h-[28px] bg-[#DADCDC] text-black rounded-[25px]">Найти</button>
+  </div>
+  <button class="w-[158px] h-[30px] rounded-[20px] text-white bg-[#00C65E]">Узнать цену</button>
+</div>
+</header>
+</div>
 </body>
 </html>
