--- a/src/upage2.html
+++ b/src/upage2.html
@@ -37,6 +37,17 @@
   <button class="w-[158px] h-[30px] rounded-[20px] text-white bg-[#00C65E]">Узнать цену</button>
 </div>
 </header>
+<section class="flex flex-col lg:flex-row lg:justify-around gap-5 mt-[50px]">
+<aside class="text-center lg:text-start">
+    <h1 class="text-[30px] font-bold">Ремонт Ipad </h1> <br>
+    <p class="font-sans text-[22px]">Ремонт планшетов любой сложности <br> неисправности: от замены кнопок до <br> материнской платы.</p> 
+    <button class="w-[180px] h-[41px] bg-[#00C65E] rounded-[15px] text-white mt-[100px]">Оставить заявку</button>
+</aside>
+<aside class="relative mx-[100px]">
+  <img src="uimg/Ellipse 12 (1).png" alt="">
+  <img src="uimg/Group 549.png" alt="" class="absolute top-0 left-0">
+</aside>
+</section>
 </div>
 </body>
 </html>
