--- a/src/upage2.html
+++ b/src/upage2.html
@@ -48,6 +48,34 @@
   <img src="uimg/Group 549.png" alt="" class="absolute top-0 left-0">
 </aside>
 </section>
+<h1 class="text-center font-bold text-[30px] mt-[200px]">Популярные услуги</h1>
+<section class="flex flex-col lg:flex-row lg:justify-around gap-5 mt-[50px]">
+<img class="w-[50px] h-[50px] m-auto lg:m-0" src="uimg/illustration замена дисплея.png" alt="">
+<img class="w-[50px] h-[50px] m-auto lg:m-0" src="uimg/illustration восстановление по.png" alt="">
+<img class="w-[50px] h-[50px] m-auto lg:m-0" src="uimg/illustration замена батареи.png" alt="">
+<img class="w-[50px] h-[50px] m-auto lg:m-0" src="uimg/illustration замена динамика.png" alt="">
+</section>
+<div class="flex justify-around mt-[20px]  flex-col  lg:flex-row text-center lg:text-start">
+    <p class="text-[20px] font-bold">Замена динамика</p>
+    <p class="text-[20px] font-bold">Замена батареи</p>
+    <p class="text-[20px] font-bold">Восстановление ПО</p>
+    <p class="text-[20px] font-bold">Замена дисплея</p>
+</div>
+<h1 class="text-[30px] font-bold text-center mt-[100px]">Модели</h1>
+<section class="flex flex-col lg:flex-row lg:justify-around gap-5 mt-[50px]">
+<article class="w-[170px] h-[170px] rounded-[25px] bg-white shadow-[1px_1px_1px_1px_gray] p-[20px] m-auto lg:m-0">
+    <img src="uimg/Frame 78 (1).png" alt="">
+    <p class="text-[20px] font-bold text-center">iPad Pro</p>
+</article>
+<article class="w-[170px] h-[170px] rounded-[25px] bg-white shadow-[1px_1px_1px_1px_gray] p-[20px] m-auto lg:m-0">
+    <img src="uimg/Frame 78 (4).png" alt="">
+    <p class="text-[20px] font-bold text-center">iPad Pro</p>
+</article>
+<article class="w-[170px] h-[170px] rounded-[25px] bg-white shadow-[1px_1px_1px_1px_gray] p-[20px] m-auto lg:m-0">
+    <img src="uimg/Frame 78 (3).png" alt="">
+    <p class="text-[20px] font-bold text-center">iPad Pro</p>
+</article>
+</section>
 </div>
 </body>
 </html>
