--- a/src/upage2.html
+++ b/src/upage2.html
@@ -76,6 +76,96 @@
     <p class="text-[20px] font-bold text-center">iPad Pro</p>
 </article>
 </section>
+<h1 class="font-bold text-center text-[35px] mt-[100px]">Неисправности</h1>
+<section class="flex flex-col lg:flex-row lg:justify-around gap-5  bg-white shadow-[1px_1px_1px_1px_gray] p-[50px] rounded-[20px]">
+<aside>
+<div class="flex flex-col gap-2 font-sans text-[20px]">
+  <div class="flex items-center gap-2">
+    <img class="w-[20px] h-[20px]" src="uimg/Frame 29.png" alt="">
+    <p>Не работает гнездо зарядки</p> <br> 
+  </div>
+  <div class="flex items-center gap-2">
+    <img class="w-[20px] h-[20px]" src="uimg/Frame 29.png" alt=""> 
+    <p>Не работает аккумулятор</p> <br> 
+  </div>
+  <div class="flex items-center gap-2">
+    <img class="w-[20px] h-[20px]" src="uimg/Frame 29.png" alt="">
+    <p>Не работает динамик</p> <br>
+  </div>
+  <div class="flex items-center gap-2">
+    <img class="w-[20px] h-[20px]" src="uimg/Frame 29.png" alt="">
+    <p>Не работает гнездо наушников</p> <br>
+  </div>
+  <div class="flex items-center gap-2">
+    <img class="w-[20px] h-[20px]" src="uimg/Frame 29.png" alt="">
+    <p>Не работает вибрация</p> <br> 
+  </div>
+  <div class="flex items-center gap-2">
+    <img class="w-[20px] h-[20px]" src="uimg/Frame 29.png" alt="">
+    <p>Не работает звук</p> <br> 
+  </div>
+</div>
+</aside>
+<aside>
+    <div class="flex flex-col gap-2 font-sans text-[20px]">
+  <div class="flex items-center gap-2">
+    <img class="w-[20px] h-[20px]" src="uimg/Frame 29.png" alt="">
+    <p>Не работает гнездо зарядки</p> <br> 
+  </div>
+  <div class="flex items-center gap-2">
+    <img class="w-[20px] h-[20px]" src="uimg/Frame 29.png" alt=""> 
+    <p>Не работает аккумулятор</p> <br> 
+  </div>
+  <div class="flex items-center gap-2">
+    <img class="w-[20px] h-[20px]" src="uimg/Frame 29.png" alt="">
+    <p>Не работает динамик</p> <br> 
+  </div>
+  <div class="flex items-center gap-2">
+    <img class="w-[20px] h-[20px]" src="uimg/Frame 29.png" alt="">
+    <p>Не работает гнездо наушников</p> <br> 
+  </div>
+  <div class="flex items-center gap-2">
+    <img class="w-[20px] h-[20px]" src="uimg/Frame 29.png" alt="">
+    <p>Не работает вибрация</p> <br> 
+  </div>
+  <div class="flex items-center gap-2">
+    <img class="w-[20px] h-[20px]" src="uimg/Frame 29.png" alt="">
+    <p>Не работает звук</p> <br> 
+  </div>
+</div>
+</aside>
+<aside>
+    <div class="flex flex-col gap-2 font-sans text-[20px]">
+  <div class="flex items-center gap-2">
+    <img class="w-[20px] h-[20px]" src="uimg/Frame 29.png" alt="">
+    <p>Не работает гнездо зарядки</p> <br> 
+  </div>
+  <div class="flex items-center gap-2">
+    <img class="w-[20px] h-[20px]" src="uimg/Frame 29.png" alt=""> 
+    <p>Не работает аккумулятор</p> <br> 
+  </div>
+  <div class="flex items-center gap-2">
+    <img class="w-[20px] h-[20px]" src="uimg/Frame 29.png" alt="">
+    <p>Не работает динамик</p> <br> 
+  </div>
+  <div class="flex items-center gap-2">
+    <img class="w-[20px] h-[20px]" src="uimg/Frame 29.png" alt="">
+    <p>Не работает гнездо наушников</p> <br> 
+  </div>
+  <div class="flex items-center gap-2">
+    <img class="w-[20px] h-[20px]" src="uimg/Frame 29.png" alt="">
+    <p>Не работает вибрация</p> <br> 
+  </div>
+  <div class="flex items-center gap-2">
+    <img class="w-[20px] h-[20px]" src="uimg/Frame 29.png" alt="">
+    <p>Не работает звук</p> <br> 
+  </div>
+</div>
+</aside>
+</section>
+<h1 class="text-center text-[#00C65E] text-[35px] font-bold mt-[100px]">Узнайте стоимость ремонта онлайн </h1>
+<p class="font-bold text-[20px] text-center">И получите скидку 5%</p> <br>
+<button class="w-[250px] h-[41px] rounded-[15px] mx-[70px] bg-[#00C65E] m-auto lg:mx-[470px] text-white">Узнать</button>
 </div>
 </body>
 </html>
