--- a/src/upage2.html
+++ b/src/upage2.html
@@ -166,6 +166,61 @@
 <h1 class="text-center text-[#00C65E] text-[35px] font-bold mt-[100px]">Узнайте стоимость ремонта онлайн </h1>
 <p class="font-bold text-[20px] text-center">И получите скидку 5%</p> <br>
 <button class="w-[250px] h-[41px] rounded-[15px] mx-[70px] bg-[#00C65E] m-auto lg:mx-[470px] text-white">Узнать</button>
+<h1 class="font-bold text-[35px] text-center mt-[100px]">Виды работ</h1>
+<section class="flex flex-col lg:flex-row lg:justify-around gap-5 mt-[50px]">
+<article class="shadow-[1px_1px_1px_1px_gray] rounded-[5px] p-[30px]">
+  <img class="m-auto" src="uimg/Group 339.png" alt="">
+  <h1 class="text-center text-[25px] text-[#00C65E] font-bold mt-[30px]">Модульный ремонт</h1> <br> 
+  <ul class="text-[20px] font-[600]">
+    <li>Замена блока питания</li> 
+    <li>Чистка от пыли</li> 
+    <li>Замена кнопок громкости</li> 
+    <li>Замена кнопки Home (домой)</li>  <br>
+  </ul>
+ <div class="flex justify-end">
+  <img src="uimg/default.png" alt="">
+</div>
+</article>
+<article class="shadow-[1px_1px_1px_1px_gray] rounded-[5px] p-[30px]">
+  <img class="m-auto" src="uimg/Group 351.png" alt="">
+  <h1 class="text-center text-[25px] text-[#00C65E] font-bold mt-[30px]">Модульный ремонт</h1> <br> 
+  <ul class="text-[20px] font-[600]">
+    <li>Замена блока питания</li> 
+    <li>Чистка от пыли</li> 
+    <li>Замена кнопок громкости</li> 
+    <li>Замена кнопки Home (домой)</li>  <br>
+  </ul>
+ <div class="flex justify-end">
+  <img src="uimg/default.png" alt="">
+</div>
+</article>
+<article class="shadow-[1px_1px_1px_1px_gray] rounded-[5px] p-[30px]">
+  <img class="m-auto" src="uimg/Illustration (9).png" alt="">
+  <h1 class="text-center text-[25px] text-[#00C65E] font-bold mt-[30px]">Модульный ремонт</h1> <br> 
+  <ul class="text-[20px] font-[600]">
+    <li>Замена блока питания</li> 
+    <li>Чистка от пыли</li> 
+    <li>Замена кнопок громкости</li> 
+    <li>Замена кнопки Home (домой)</li>  <br>
+  </ul>
+ <div class="flex justify-end">
+  <img src="uimg/default.png" alt="">
+</div>
+</article>
+<article class="shadow-[1px_1px_1px_1px_gray] rounded-[5px] p-[30px]">
+  <img class="m-auto" src="uimg/Group 355.png" alt="">
+  <h1 class="text-center text-[25px] text-[#00C65E] font-bold mt-[30px]">Модульный ремонт</h1> <br> 
+  <ul class="text-[20px] font-[600]">
+    <li>Замена блока питания</li> 
+    <li>Чистка от пыли</li> 
+    <li>Замена кнопок громкости</li> 
+    <li>Замена кнопки Home (домой)</li>  <br>
+  </ul>
+ <div class="flex justify-end">
+  <img src="uimg/default.png" alt="">
+</div>
+</article>
+</section>
 </div>
 </body>
 </html>
