--- a/src/upage2.html
+++ b/src/upage2.html
@@ -222,5 +222,27 @@
 </article>
 </section>
 </div>
+<section class="bg-[#F7F7F7] mt-[100px] p-[50px]">
+  <div class="max-w-[1200px] m-auto">
+<p class="text-center text-[35px] font-bold">Остались вопросы?</p> 
+<p class="text-center">Оставьте заявку и нам менеджер свяжется с вами</p> <br>
+<div class="flex gap-[20px] lg:mx-[300px] flex-col lg:flex-row">
+  <div>
+<label class="font-bold text-[20px]" for="">Телефон</label> <br>
+<input class="w-[300px] h-[40px] rounded-[20px] border-[1px] border-[solid] border-[gray] p-[20px]" placeholder="+ 7 (123)-456-78-90" type="number" name="" id="">
+</div>
+<button class="w-[218px] h-[41px] bg-[#00C65E] text-white rounded-[15px] mt-[30px]">Заказать звонок</button>
+</div>
+<div class="flex justify-center gap-[50px] text-[20px] font-bold mt-[40px]">
+<h1>Или позвоните сами</h1>
+ <h1> +7 (968) 430-88-20</h1>
+</div>
+  </div>
+</section>
+<section>
+  <div class="max-w-[1200px] m-auto p-[50px]">
+     <h1 class="text-center text-[gray]">К вашим услугам доска бесплатных объявлений Dily.ru. На нашем портале вы найдёте всё, начиная от мелких бытовых приборов и заканчивая недвижимостью и автомобилями. А если вы продаёте товар, услугу, сдаёте или снимаете жилье, мы поможем решить вашу задачу быстро и эффективно, для этого просто добавьте объявление бесплатно! Широким предложением товаров и услуг. Одежда и обувь, электроника и бытовая техника, недвижимость, автомобили, работа, предметы коллекционирования – здесь вы найдёте объявления на любой вкус! Огромной аудиторией. Тысячи ваших потенциальных клиентов посещают наш сайт ежедневно. Не упускайте их, подайте объявление прямо сейчас! Удобством пользования. Продуманная структура разделов и поиск объявлений помогут вам быстро найти нужные предложения. А разместить объявление вы сможете всего в несколько кликов.</h1>
+  </div>
+</section>
 </body>
 </html>
