--- a/src/upage2.html
+++ b/src/upage2.html
@@ -244,5 +244,79 @@
      <h1 class="text-center text-[gray]">К вашим услугам доска бесплатных объявлений Dily.ru. На нашем портале вы найдёте всё, начиная от мелких бытовых приборов и заканчивая недвижимостью и автомобилями. А если вы продаёте товар, услугу, сдаёте или снимаете жилье, мы поможем решить вашу задачу быстро и эффективно, для этого просто добавьте объявление бесплатно! Широким предложением товаров и услуг. Одежда и обувь, электроника и бытовая техника, недвижимость, автомобили, работа, предметы коллекционирования – здесь вы найдёте объявления на любой вкус! Огромной аудиторией. Тысячи ваших потенциальных клиентов посещают наш сайт ежедневно. Не упускайте их, подайте объявление прямо сейчас! Удобством пользования. Продуманная структура разделов и поиск объявлений помогут вам быстро найти нужные предложения. А разместить объявление вы сможете всего в несколько кликов.</h1>
   </div>
 </section>
+<footer class="flex flex-col lg:flex-row lg:justify-around gap-5 mt-[100px] bg-[#EFEFEF] p-[40px]">
+  <div class="max-w-[1200px] m-auto w-full">
+    <div class="flex flex-col lg:flex-row justify-between items-start gap-[50px]">
+      <div class="flex gap-[50px]">
+        <img src="uimg/Logo (12).png" alt="">
+        <img src="uimg/Location (2).png" alt="">
+      </div>
+      <div>
+        <h1 class="mb-2 font-semibold text-lg">Присоединяйтесь к нам</h1>
+        <div class="flex gap-[10px]">
+          <svg width="34" height="34" viewBox="0 0 34 34" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <circle cx="17.4229" cy="16.6816" r="16.5" fill="white"/>
+            <path d="M22.0624 7.37305H12.7686C10.2124 7.37305 8.11426 9.47117 8.11426 12.0421V21.3359C8.11426 23.8921 10.2124 25.9902 12.7686 25.9902H22.0624C24.6333 25.9902 26.7314 23.8921 26.7314 21.3212V12.0421C26.7314 9.47117 24.6333 7.37305 22.0624 7.37305ZM19.9199 16.6816H18.1616V22.4441H15.9453V16.6816H14.7632V14.3175H15.7975V13.3128C15.7975 12.3672 16.2704 10.8748 18.2651 10.8748H20.0824V12.84H18.797C18.5901 12.84 18.3094 12.973 18.3094 13.431V14.3175H20.1268L19.9199 16.6816Z" fill="#00C65E"/>
+          </svg>
+          <svg width="34" height="34" viewBox="0 0 34 34" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <circle cx="16.624" cy="16.6816" r="16.5" fill="white"/>
+            <path d="M18.2716 15.4854C17.9023 14.9683 17.2965 14.6284 16.6168 14.6284C15.9371 14.6284 15.3313 14.9683 14.9619 15.4854C14.7255 15.8252 14.5778 16.239 14.5778 16.6822C14.5778 17.8052 15.4938 18.7212 16.6168 18.7212C17.7397 18.7212 18.6558 17.8052 18.6558 16.6822C18.6558 16.239 18.5081 15.8252 18.2716 15.4854Z" fill="#00C65E"/>
+            <path d="M19.5577 15.5C19.7055 15.7955 19.7941 16.2683 19.7941 16.682C19.7941 18.4256 18.3757 19.8588 16.6174 19.8588C14.8591 19.8588 13.4407 18.4403 13.4407 16.682C13.4407 16.2536 13.5293 15.7955 13.6771 15.5H11.8892V20.2429C11.8892 20.8635 12.4359 21.4102 13.0565 21.4102H20.1783C20.7989 21.4102 21.3456 20.8635 21.3456 20.2429V15.5H19.5577Z" fill="#00C65E"/>
+            <path d="M20.8127 12.2194H19.0988V14.1845H21.0491V12.4705V12.2046L20.8127 12.2194Z" fill="#00C65E"/>
+            <path d="M21.2562 7.37305H11.9771C9.40617 7.37305 7.30804 9.47117 7.30804 12.0421V21.3359C7.30804 23.8921 9.40617 25.9902 11.9771 25.9902H21.2709C23.8419 25.9902 25.94 23.8921 25.94 21.3212V12.0421C25.9252 9.47117 23.8271 7.37305 21.2562 7.37305ZM22.3791 15.4848V20.2425C22.3791 21.4837 21.4187 22.4441 20.1775 22.4441H13.0557C11.8146 22.4441 10.8542 21.4837 10.8542 20.2425V15.4848V13.1207C10.8542 11.8796 11.8146 10.9192 13.0557 10.9192H20.1775C21.4187 10.9192 22.3791 11.8796 22.3791 13.1207V15.4848Z" fill="#00C65E"/>
+          </svg>
+          <svg width="34" height="34" viewBox="0 0 34 34" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <circle cx="16.8271" cy="16.6816" r="16.5" fill="white"/>
+            <path fill-rule="evenodd" clip-rule="evenodd" d="M12.1735 7.37256C9.60302 7.37256 7.51922 9.45636 7.51922 12.0269V21.3354C7.51922 23.9059 9.60302 25.9897 12.1735 25.9897H21.4821C24.0526 25.9897 26.1364 23.9059 26.1364 21.3354V12.0269C26.1364 9.45636 24.0526 7.37256 21.4821 7.37256H12.1735ZM22.3368 12.9965C22.7474 12.9965 22.8337 13.2079 22.7474 13.4955V13.4956C22.5748 14.2866 20.921 16.6165 20.921 16.6165C20.7771 16.8465 20.7196 16.9615 20.921 17.2204C20.9918 17.3196 21.143 17.4678 21.3161 17.6373C21.4941 17.8117 21.6953 18.0087 21.8557 18.1983C22.4388 18.8544 22.8783 19.4077 23.0007 19.7891C23.1125 20.1719 22.9186 20.3658 22.5308 20.3658H21.1733C20.8097 20.3658 20.6266 20.1621 20.2312 19.7222C20.0635 19.5356 19.8576 19.3065 19.5834 19.0324C18.7779 18.2558 18.4328 18.1552 18.2314 18.1552C17.9582 18.1552 17.8765 18.2326 17.8765 18.6204V19.8378C17.8765 20.1719 17.7698 20.3658 16.9068 20.3658C15.4686 20.3658 13.8883 19.4925 12.7664 17.882C11.0838 15.5234 10.6235 13.74 10.6235 13.3805C10.6235 13.1791 10.7011 12.9965 11.089 12.9965H12.4465C12.7934 12.9965 12.9239 13.1483 13.054 13.5243C13.718 15.4582 14.8374 17.1485 15.2976 17.1485C15.4702 17.1485 15.5493 17.069 15.5493 16.6307V14.6316C15.5181 14.0626 15.3194 13.8166 15.1722 13.6343C15.0813 13.5217 15.01 13.4335 15.01 13.3085C15.01 13.1567 15.1397 12.9965 15.3554 12.9965H17.4886C17.7763 12.9965 17.8765 13.1503 17.8765 13.4955V16.1849C17.8765 16.4725 18.0014 16.573 18.0877 16.573C18.2603 16.573 18.404 16.4725 18.7204 16.1561C19.6984 15.0631 20.3888 13.3805 20.3888 13.3805C20.4751 13.1791 20.6341 12.9965 20.9793 12.9965H22.3368Z" fill="#00C65E"/>
+          </svg>
+        </div>
+      </div>
+    </div>
+    <hr class="w-[100%] bg-gray-400 h-[2px] mt-[20px]">
+    <div class="flex flex-col lg:flex-row lg:justify-around gap-5 mt-[50px]">
+    <aside>
+      <h1 class="text-[24px] font-bold">Доска объявлений</h1> <br>
+      <p>Объявления</p>
+      <p>Магазины</p>
+      <p>Благотворительность</p>
+      <p>Личный кабинет</p>
+    </aside>
+     <aside>
+      <h1 class="text-[24px] font-bold">Сервисный центр</h1> <br>
+      <p>Что мы чиним</p>
+      <p>Адреса сервисных <br>
+центров</p>
+ 
+    </aside>
+        <aside>
+      <h1 class="text-[24px] font-bold">Интернет-магазин</h1> <br>
+      <p>Объявления</p>
+      <p>Магазины</p>
+      <p>Благотворительность</p>
+      <p>Личный кабинет</p>
+      <p>Вакансии</p>
+      <p>Контакты</p>
+    </aside>
+    <aside>
+      <h1 class="text-[24px] font-bold">Пользователям</h1> <br>
+            <p>Доставка и оплата</p>
+      <p>Личный кабинет</p>
+      <p>Вакансии</p>
+      <p>Контакты</p>
+    </aside>
+    </div>
+<div class="flex flex-col lg:flex-row lg:justify-around gap-5 p-4">
+    <nav class="flex flex-wrap gap-6 items-center">
+      <h1>Политика конфиденциальности</h1>
+      <h1>Пользовательское соглашение</h1>
+      <h1>Использование cookies</h1>
+      <h1>Карта сайта</h1>
+    </nav>
+    <div class="flex gap-2 items-center text-sm text-gray-600">
+      <span>Dily.ru</span>
+      <span>2021©</span>
+    </div>
+  </div>
+</footer>
 </body>
 </html>
