--- a/src/R1.html
+++ b/src/R1.html
@@ -118,6 +118,33 @@
                 <img src="./rimg/3.png" alt="" class="h-[80vh] w-[60vw] hidden lg:block">
             </div>
         </section>
+
+        <section class="section2 bg-[url('./rimg/4.png')] lg:bg-cover bg-left lg:max-w-[1200px] m-auto pb-16">
+            <div>
+                <h1 class="text-3xl font-semibold text-[#00C65E] text-center">Узнайте стоимость ремонта онлайн</h1><br>
+                <h1 class="text-xl font-medium text-center pb-5">И получите скидку 5%</h1>
+                <button class="text-white text-lg px-[90px] py-2 bg-[#00C65E] rounded-xl w-fit lg:ml-[40.5%] ml-[25%]">Узнать</button>
+            </div>
+            <h1 class="text-4xl font-semibold text-black text-center pt-16 pb-5">Работаем по всей территории Москвы</h1>
+            <div class="flex gap-14 w-[90%] lg:max-w-[1200px] mx-auto justify-center flex-col lg:flex-row">
+                    <div>
+                        <h1 class="text-xl font-medium">Город</h1><br>
+                        <div
+                            class="w-fit rounded-xl px-5 py-3 border-2 border-[#EFEFEF] text-black text-lg font-normal flex gap-16 items-center">
+                            <h1 class="text-base">Москва</h1>
+                            <i class="fa-solid fa-angle-down"></i>
+                        </div>
+                    </div>
+                    <div>
+                        <h1 class="text-xl font-medium">Метро</h1><br>
+                        <div
+                            class="w-fit rounded-xl px-5 py-3 border-2 border-[#EFEFEF] text-black text-lg font-normal flex gap-[100px] items-center">
+                            <h1 class="text-base">Выбрать...</h1>
+                            <i class="fa-solid fa-angle-down"></i>
+                        </div>
+                    </div>
+                </div>
+        </section>
     </main>
 </body>
 
