--- a/src/R1.html
+++ b/src/R1.html
@@ -145,6 +145,26 @@
                     </div>
                 </div>
         </section>
+
+        <section class="section3 bg-[#F7F7F7]">
+            <div class="w-[90%] lg:max-w-[1200px] m-auto py-10 space-y-5">
+                <h1 class="text-center text-3xl font-semibold">Остались вопросы?</h1>
+                <h1 class="text-xl font-medium text-center">Оставьте заявку и нам менеджер свяжется с вами</h1>
+                <div class="flex justify-center gap-10">
+                    <div class="space-y-1 flex items-center lg:gap-16 flex-col lg:flex-row">
+                        <div>
+                            <h1 class="text-lg font-medium text-center lg:text-left">Телефон</h1>
+                            <input type="text" placeholder="+ 7 (123)-456-78-90" class="border-[1px] border-gray-300 px-4 pr-16 py-2 bg-white rounded-xl">
+                        </div>
+                        <button class="lg:self-end text-base font-medium text-white bg-[#00C65E] px-10 py-2 rounded-xl">Заказать звонок</button>
+                    </div>
+                </div>
+                <div class="flex justify-center items-center lg:gap-10 gap-3">
+                    <h1 class="text-lg font-medium">Или позвоните сами</h1>
+                    <h1 class="font-medium"><i class="text-[#00C65E] fa-solid fa-phone"></i> +7 (968) 430-88-20</h1>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 
