--- a/src/R1.html
+++ b/src/R1.html
@@ -105,14 +105,16 @@
                 </div>
             </div>
 
-            <div class="lg:py-16 flex w-[90%] lg:max-w-[1200px] lg:text-left text-center m-auto justify-between flex-col lg:flex-row">
+            <div
+                class="lg:py-16 flex w-[90%] lg:max-w-[1200px] lg:text-left text-center m-auto justify-between flex-col lg:flex-row">
                 <aside class="space-y-4 border-y-2 border-gray-300 h-fit">
                     <h1 class="pt-3 text-black font-medium">Москва г, Ленинградское шоссе 8к3</h1>
                     <h1><span class="font-medium text-lg">Пн.-Пт:</span> с 10.00 до 21.00<br>
                         <span class="font-medium text-lg">Сб:</span> с 10.00 до 21.00
                     </h1>
                     <h1 class="font-medium"><i class="text-[#00C65E] fa-solid fa-phone"></i> +7 (968) 430-88-20</h1>
-                    <h1 class="lg:justify-start justify-center flex items-center text-xl"><span class="text-4xl text-[#00C65E] mr-2">• </span>Войковская
+                    <h1 class="lg:justify-start justify-center flex items-center text-xl"><span
+                            class="text-4xl text-[#00C65E] mr-2">• </span>Войковская
                     </h1>
                 </aside>
                 <img src="./rimg/3.png" alt="" class="h-[80vh] w-[60vw] hidden lg:block">
@@ -123,27 +125,28 @@
             <div>
                 <h1 class="text-3xl font-semibold text-[#00C65E] text-center">Узнайте стоимость ремонта онлайн</h1><br>
                 <h1 class="text-xl font-medium text-center pb-5">И получите скидку 5%</h1>
-                <button class="text-white text-lg px-[90px] py-2 bg-[#00C65E] rounded-xl w-fit lg:ml-[40.5%] ml-[25%]">Узнать</button>
+                <button
+                    class="text-white text-lg px-[90px] py-2 bg-[#00C65E] rounded-xl w-fit lg:ml-[40.5%] ml-[25%]">Узнать</button>
             </div>
             <h1 class="text-4xl font-semibold text-black text-center pt-16 pb-5">Работаем по всей территории Москвы</h1>
             <div class="flex gap-14 w-[90%] lg:max-w-[1200px] mx-auto justify-center flex-col lg:flex-row">
-                    <div>
-                        <h1 class="text-xl font-medium">Город</h1><br>
-                        <div
-                            class="w-fit rounded-xl px-5 py-3 border-2 border-[#EFEFEF] text-black text-lg font-normal flex gap-16 items-center">
-                            <h1 class="text-base">Москва</h1>
-                            <i class="fa-solid fa-angle-down"></i>
-                        </div>
-                    </div>
-                    <div>
-                        <h1 class="text-xl font-medium">Метро</h1><br>
-                        <div
-                            class="w-fit rounded-xl px-5 py-3 border-2 border-[#EFEFEF] text-black text-lg font-normal flex gap-[100px] items-center">
-                            <h1 class="text-base">Выбрать...</h1>
-                            <i class="fa-solid fa-angle-down"></i>
-                        </div>
+                <div>
+                    <h1 class="text-xl font-medium">Город</h1><br>
+                    <div
+                        class="w-fit rounded-xl px-5 py-3 border-2 border-[#EFEFEF] text-black text-lg font-normal flex gap-16 items-center">
+                        <h1 class="text-base">Москва</h1>
+                        <i class="fa-solid fa-angle-down"></i>
                     </div>
                 </div>
+                <div>
+                    <h1 class="text-xl font-medium">Метро</h1><br>
+                    <div
+                        class="w-fit rounded-xl px-5 py-3 border-2 border-[#EFEFEF] text-black text-lg font-normal flex gap-[100px] items-center">
+                        <h1 class="text-base">Выбрать...</h1>
+                        <i class="fa-solid fa-angle-down"></i>
+                    </div>
+                </div>
+            </div>
         </section>
 
         <section class="section3 bg-[#F7F7F7]">
@@ -154,9 +157,12 @@
                     <div class="space-y-1 flex items-center lg:gap-16 flex-col lg:flex-row">
                         <div>
                             <h1 class="text-lg font-medium text-center lg:text-left">Телефон</h1>
-                            <input type="text" placeholder="+ 7 (123)-456-78-90" class="border-[1px] border-gray-300 px-4 pr-16 py-2 bg-white rounded-xl">
+                            <input type="text" placeholder="+ 7 (123)-456-78-90"
+                                class="border-[1px] border-gray-300 px-4 pr-16 py-2 bg-white rounded-xl">
                         </div>
-                        <button class="lg:self-end text-base font-medium text-white bg-[#00C65E] px-10 py-2 rounded-xl">Заказать звонок</button>
+                        <button
+                            class="lg:self-end text-base font-medium text-white bg-[#00C65E] px-10 py-2 rounded-xl">Заказать
+                            звонок</button>
                     </div>
                 </div>
                 <div class="flex justify-center items-center lg:gap-10 gap-3">
@@ -164,6 +170,23 @@
                     <h1 class="font-medium"><i class="text-[#00C65E] fa-solid fa-phone"></i> +7 (968) 430-88-20</h1>
                 </div>
             </div>
+        </section>
+
+        <section class="section4 w-[90%] max-w-[1200px] m-auto py-16">
+            <h1 class="text-justify lg:text-start text-[#818187] text-sm">Вы хотите продать или купить что-либо быстро и
+                выгодно?</h1><br>
+            <h1 class="text-justify lg:text-start text-[#818187] text-sm">К вашим услугам доска бесплатных объявлений
+                Dily.ru. На нашем портале вы найдёте всё, начиная от мелких
+                бытовых приборов и заканчивая недвижимостью и автомобилями. А если вы продаёте
+                товар, услугу,сдаёте или снимаете жилье, мы поможем решить вашу задачу быстро и эффективно, 
+                для этого просто добавьте объявление бесплатно!<br><br>
+                Широким предложением товаров и услуг. Одежда и обувь, электроника и бытовая техника, недвижимость,
+                автомобили, работа, предметы коллекционирования – здесь вы найдёте объявления
+                на любой вкус! Огромной аудиторией. Тысячи ваших потенциальных клиентов посещают наш сайт ежедневно. Не
+                упускайте их, подайте объявление прямо сейчас! Удобством пользования. Продуманная структура разделов и
+                поиск объявлений помогут вам быстро найти нужные предложения. А разместить объявление вы сможете всего в
+                несколько кликов.</h1><br>
+            <h1 class="text-[#818187] text-sm underline">Развернуть <i class="ml-3 fa-solid fa-angle-down"></i></h1>
         </section>
     </main>
 </body>
