--- a/src/R1.html
+++ b/src/R1.html
@@ -178,7 +178,7 @@
             <h1 class="text-justify lg:text-start text-[#818187] text-sm">К вашим услугам доска бесплатных объявлений
                 Dily.ru. На нашем портале вы найдёте всё, начиная от мелких
                 бытовых приборов и заканчивая недвижимостью и автомобилями. А если вы продаёте
-                товар, услугу,сдаёте или снимаете жилье, мы поможем решить вашу задачу быстро и эффективно, 
+                товар, услугу,сдаёте или снимаете жилье, мы поможем решить вашу задачу быстро и эффективно,
                 для этого просто добавьте объявление бесплатно!<br><br>
                 Широким предложением товаров и услуг. Одежда и обувь, электроника и бытовая техника, недвижимость,
                 автомобили, работа, предметы коллекционирования – здесь вы найдёте объявления
@@ -188,6 +188,70 @@
                 несколько кликов.</h1><br>
             <h1 class="text-[#818187] text-sm underline">Развернуть <i class="ml-3 fa-solid fa-angle-down"></i></h1>
         </section>
+
+        <footer class="bg-[#EFEFEF]">
+            <nav class="border-b-2 border-gray-400 flex justify-between items-center">
+                <div class="w-[90%] max-w-[1200px] m-auto py-3 justify-between items-center flex">
+                    <div class="flex gap-10 items-center">
+                        <img src="/src/rimg/1.png" alt="" class="w-[72p] h-[31px]">
+                        <h1 class="text-[#00C65E] hidden lg:block"><i class="fa-solid fa-location-arrow"></i>
+                            Москва <span><i class="text-black fa-solid fa-angle-down"></i></span></h1>
+                    </div>
+                    <div class="flex gap-3 items-center">
+                        <h1 class="text-lg font-medium hidden lg:block">Присоединяйтесь к нам </h1>
+                        <img src="./rimg/5.png" alt="" class="w-[33px] h-[33px]">
+                        <img src="./rimg/6.png" alt="" class="w-[33px] h-[33px]">
+                        <img src="./rimg/7.png" alt="" class="w-[33px] h-[33px]">
+                    </div>
+                </div>
+            </nav>
+
+            <section class="w-[90%] max-w-[1200px] lg:gap-[80px] gap-10 m-auto flex py-10 flex-wrap">
+                <ul class="space-y-2">
+                    <li class="text-base font-semibold">Доска объявлений</li>
+                    <li class="text-sm font-normal">Объявления</li>
+                    <li class="text-sm font-normal">Магазины</li>
+                    <li class="text-sm font-normal">Благотворительность</li>
+                    <li class="text-sm font-normal">Личный кабинет</li>
+                </ul>
+                <ul class="space-y-2">
+                    <li class="text-base font-medium">Сервисный центр</li>
+                    <li class="text-sm font-normal">Что мы чиним</li>
+                    <li class="text-sm font-normal">Адреса сервисных<br>центров</li>
+                </ul>
+                <ul class="space-y-2">
+                    <li class="text-base font-medium">Интернет-магазин</li>
+                    <li class="text-sm font-normal">Каталог товаров</li>
+                    <li class="text-sm font-normal">Доставка и оплата</li>
+                    <li class="text-sm font-normal">Корзина</li>
+                    <li class="text-sm font-normal">Личный кабинет</li>
+                    <li class="text-sm font-normal">Контакты</li>
+                    <li class="text-sm font-normal">Вакансии</li>
+                </ul>
+                <ul class="space-y-2">
+                    <li class="text-base font-medium">Пользователям</li>
+                    <li class="text-sm font-normal">Гарантии</li>
+                    <li class="text-sm font-normal">Доставка и оплата</li>
+                    <li class="text-sm font-normal">Служба поддержки</li>
+                    <li class="text-sm font-normal">Вопрос-ответ</li>
+                </ul>
+            </section>
+
+            <nav class="bg-white py-3">
+                <div class="w-[90%] lg:max-w-[1200px] m-auto flex justify-between">
+                    <div class="flex lg:gap-7 text-sm font-semibold flex-wrap gap-2">
+                        <h1>Политика конфиденциальности</h1>
+                        <h1 class="hidden lg:block">Пользовательское соглашение</h1>
+                        <h1 class="hidden lg:block">Использование cookies</h1>
+                        <h1 class="hidden lg:block">Карта сайта</h1>
+                    </div>
+                    <div class="flex gap-7 text-sm font-semibold">
+                        <h1>Dily.ru</h1>
+                        <h1>2021©</h1>
+                    </div>
+                </div>
+            </nav>
+        </footer>
     </main>
 </body>
 
