--- a/src/R2.html
+++ b/src/R2.html
@@ -58,69 +58,22 @@
             </nav>
         </nav>
 
-        <section class="py-16 lg:mt-16 bg-gradient-to-r from-white via-[#E1F7EB] to-[#C6F2DA]"
+        <section class="py-16 lg:mt-16 bg-gradient-to-r from-white via-[#FFF6EB] to-[#FFEDD8]"
             style="box-shadow: 0px 2px 10px gray;">
-            <div class="flex w-[90%] lg:max-w-[1200px] m-auto justify-between items-center flex-col lg:justify-center lg:flex-row">
+            <div
+                class="flex w-[90%] lg:max-w-[1200px] m-auto justify-between items-center flex-col lg:justify-center lg:flex-row">
                 <aside class="text-center lg:text-left space-y-5">
-                    <h1 class="text-3xl font-bold">Адреса сервисных центров Dily</h1>
-                    <p class="pb-7 text-2xl font-normal">Наши сервисные центры расположены<br class="hidden lg:block">
-                        в шаговой доступности рядом с метро</p>
-                    <button
-                        class="text-white text-lg px-[90px] py-2 bg-[#00C65E] rounded-xl w-fit">Оставить заявку</button>
+                    <h1 class="text-3xl font-bold">Сервисный центр у метро Аэропорт</h1>
+                    <p class="text-2xl font-normal">Живете рядом с метро Аэропорт?<br class="hidden lg:block">
+                        Закажите курьера и он заберет у вас то,<br class="hidden lg:block"> 
+                        что надо отремонтировать</p>
                 </aside>
-                <img src="./rimg/2.png" alt="" class="lg:w-[50vw] lg:h-[50vh]">
+                <img src="./rimg/8.png" alt="" class="lg:w-[50vw] lg:h-[50vh]">
             </div>
         </section>
     </header>
 
     <main>
-        <section class="section1 py-16 lg:max-w-[1200px] m-auto">
-            <h1 class="text-center text-3xl font-semibold">Нас легко найти</h1>
-            <div class="lg:flex items-center justify-between w-[90%] lg:max-w-[1200px] m-auto hidden">
-                <div class="flex gap-14">
-                    <div>
-                        <h1 class="text-2xl font-medium">Город</h1><br>
-                        <div
-                            class="rounded-xl px-5 py-3 bg-[#EFEFEF] text-black text-lg font-normal flex gap-11 items-center">
-                            <h1>Москва</h1>
-                            <i class="fa-solid fa-angle-down"></i>
-                        </div>
-                    </div>
-                    <div>
-                        <h1 class="text-2xl font-medium">Метро</h1><br>
-                        <div
-                            class="rounded-xl px-5 py-3 bg-[#EFEFEF] text-black text-lg font-normal flex gap-16 items-center">
-                            <h1>Выбрать...</h1>
-                            <i class="fa-solid fa-angle-down"></i>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="flex gap-7 self-end">
-                    <h1 class="text-black hover:underline text-lg font-normal"><i
-                            class="text-[#00C65E] fa-solid fa-list"></i> Список</h1>
-                    <h1 class="text-black hover:underline text-lg font-normal"><i
-                            class="text-[#00C65E] fa-solid fa-location-dot"></i> Карта</h1>
-                    <h1 class="text-black hover:underline text-lg font-normal"><i
-                            class="text-[#00C65E] fa-solid fa-location-dot"></i> Метро</h1>
-                </div>
-            </div>
-
-            <div
-                class="lg:py-16 flex w-[90%] lg:max-w-[1200px] lg:text-left text-center m-auto justify-between flex-col lg:flex-row">
-                <aside class="space-y-4 border-y-2 border-gray-300 h-fit">
-                    <h1 class="pt-3 text-black font-medium">Москва г, Ленинградское шоссе 8к3</h1>
-                    <h1><span class="font-medium text-lg">Пн.-Пт:</span> с 10.00 до 21.00<br>
-                        <span class="font-medium text-lg">Сб:</span> с 10.00 до 21.00
-                    </h1>
-                    <h1 class="font-medium"><i class="text-[#00C65E] fa-solid fa-phone"></i> +7 (968) 430-88-20</h1>
-                    <h1 class="lg:justify-start justify-center flex items-center text-xl"><span
-                            class="text-4xl text-[#00C65E] mr-2">• </span>Войковская
-                    </h1>
-                </aside>
-                <img src="./rimg/3.png" alt="" class="h-[80vh] w-[60vw] hidden lg:block">
-            </div>
-        </section>
 
         <section class="section2 bg-[url('./rimg/4.png')] lg:bg-cover bg-left lg:max-w-[1200px] m-auto pb-16">
             <div>
