--- a/src/R2.html
+++ b/src/R2.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <header>
+    <header class="pb-16">
         <nav class="pt-5 lg:pt-0 border-t-8 border-[#00C65E]">
             <div class="max-w-[1200px] m-auto flex items-center lg:justify-between justify-around">
                 <div class="flex items-center gap-8 ">
@@ -40,9 +40,9 @@
             <nav class="lg:bg-[#F7F7F7] lg:border-y-2 border-gray-200">
                 <div class=" flex max-w-[1200px] m-auto lg:justify-between justify-center px-5 py-4 items-center">
                     <div class="lg:flex space-x-6 hidden">
-                        <h1><i class="fa-solid fa-screwdriver-wrench"></i> Что мы чиним <i
+                        <h1 class="text-[#00C65E]"><i class="fa-solid fa-screwdriver-wrench"></i> Что мы чиним <i
                                 class="fa-solid fa-angle-right"></i></h1>
-                        <h1 class="text-[#00C65E]"><i class="fa-solid fa-location-dot"></i> Адреса сервисов </h1>
+                        <h1><i class="fa-solid fa-location-dot"></i> Адреса сервисов </h1>
                     </div>
                     <div class="rounded-full gap-0 flex text-gray-500 border-2 border-[#DADCDC] lg:border-none ">
                         <div class="pl-7 py-1 rounded-tl-full rounded-bl-full bg-white space-x-3">
@@ -59,21 +59,41 @@
         </nav>
 
         <section class="py-16 lg:mt-16 bg-gradient-to-r from-white via-[#FFF6EB] to-[#FFEDD8]"
-            style="box-shadow: 0px 2px 10px gray;">
+            style="box-shadow: 0px 1px 5px gray;">
             <div
                 class="flex w-[90%] lg:max-w-[1200px] m-auto justify-between items-center flex-col lg:justify-center lg:flex-row">
                 <aside class="text-center lg:text-left space-y-5">
                     <h1 class="text-3xl font-bold">Сервисный центр у метро Аэропорт</h1>
-                    <p class="text-2xl font-normal">Живете рядом с метро Аэропорт?<br class="hidden lg:block">
-                        Закажите курьера и он заберет у вас то,<br class="hidden lg:block"> 
+                    <p class="pb-7 text-2xl font-normal">Живете рядом с метро Аэропорт?<br class="hidden lg:block">
+                        Закажите курьера и он заберет у вас то,<br class="hidden lg:block">
                         что надо отремонтировать</p>
+                    <button class="text-white text-lg px-[90px] py-2 bg-[#00C65E] rounded-xl w-fit">Оставить
+                        заявку</button>
                 </aside>
-                <img src="./rimg/8.png" alt="" class="lg:w-[50vw] lg:h-[50vh]">
+                <img src="./rimg/8.png" alt="" class="lg:w-[40vw] lg:h-[50vh]">
             </div>
         </section>
     </header>
 
     <main>
+        <section class="section1 flex justify-center gap-8 pb-16 w-[90%] max-w-[1200px] m-auto flex-col lg:flex-row items-center">
+            <article class="flex items-center gap-3 justify-center">
+                <h1 class="text-base font-medium">Быстро</h1>
+                <img src="./rimg/9.png" alt="" class="w-[100px] h-[104px]">
+            </article>
+            <article class="flex items-center gap-3 flex-row-reverse lg:flex-row  justify-center">
+                <h1 class="text-base font-medium">С гарантией</h1>
+                <img src="./rimg/10.png" alt="" class="w-[100px] h-[104px]">
+            </article>
+            <article class="flex items-center gap-3  justify-center">
+                <h1 class="text-base font-medium">Профессионально</h1>
+                <img src="./rimg/11.png" alt="" class="w-[100px] h-[104px]">
+            </article>
+            <article class="flex items-center gap-3 flex-row-reverse lg:flex-row  justify-center">
+                <h1 class="text-base font-medium">Отличная цена</h1>
+                <img src="./rimg/12.png" alt="" class="w-[100px] h-[104px]">
+            </article>
+        </section>
 
         <section class="section2 bg-[url('./rimg/4.png')] lg:bg-cover bg-left lg:max-w-[1200px] m-auto pb-16">
             <div>
@@ -127,19 +147,13 @@
         </section>
 
         <section class="section4 w-[90%] max-w-[1200px] m-auto py-16">
-            <h1 class="text-justify lg:text-start text-[#818187] text-sm">Вы хотите продать или купить что-либо быстро и
-                выгодно?</h1><br>
-            <h1 class="text-justify lg:text-start text-[#818187] text-sm">К вашим услугам доска бесплатных объявлений
-                Dily.ru. На нашем портале вы найдёте всё, начиная от мелких
-                бытовых приборов и заканчивая недвижимостью и автомобилями. А если вы продаёте
-                товар, услугу,сдаёте или снимаете жилье, мы поможем решить вашу задачу быстро и эффективно,
-                для этого просто добавьте объявление бесплатно!<br><br>
-                Широким предложением товаров и услуг. Одежда и обувь, электроника и бытовая техника, недвижимость,
-                автомобили, работа, предметы коллекционирования – здесь вы найдёте объявления
-                на любой вкус! Огромной аудиторией. Тысячи ваших потенциальных клиентов посещают наш сайт ежедневно. Не
-                упускайте их, подайте объявление прямо сейчас! Удобством пользования. Продуманная структура разделов и
-                поиск объявлений помогут вам быстро найти нужные предложения. А разместить объявление вы сможете всего в
-                несколько кликов.</h1><br>
+            <h1 class="text-justify lg:text-start text-[#818187] text-sm">Хотите отремонтировать что-то у метро
+                Аэропорт?</h1><br>
+            <h1 class="text-justify lg:text-start text-[#818187] text-sm">Доверив ремонтные работы специалистам, вы
+                сможете возобновить работоспособность оборудования с минимальными затратами времени и денежных средств.
+                Ремонт мониторов в сервисном центре Macsave осуществляется компетентными профессионалами с применением
+                современного оборудования. Заказать услуг по ремонту монитора Apple вы можете, связавшись с нашими
+                менеджерами.</h1><br><br><br>
             <h1 class="text-[#818187] text-sm underline">Развернуть <i class="ml-3 fa-solid fa-angle-down"></i></h1>
         </section>
 
