--- a/src/sont.html
+++ b/src/sont.html
@@ -1,12 +1,84 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./output.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
+
 <body>
-    
+    <header class="pb-16">
+        <nav class="pt-5 lg:pt-0 border-t-8 border-[#00C65E]">
+            <div class="max-w-[1200px] m-auto flex items-center lg:justify-between justify-around">
+                <div class="flex items-center gap-8 ">
+                    <img src="Mimg/image.png" alt="" class="w-[72p] h-[31px]">
+                    <ul class="lg:flex text-base font-semibold hidden">
+                        <li class="px-3 py-5 hover:bg-[#B3EECF] hover:border-b-2 hover:border-[#00C65E]">Доска
+                            объявлений</li>
+                        <li class="px-3 py-5 hover:bg-[#B3EECF] hover:border-b-2 hover:border-[#00C65E]">Сервисный центр
+                        </li>
+                        <li class="px-3 py-5 hover:bg-[#B3EECF] hover:border-b-2 hover:border-[#00C65E]">
+                            Интернет-магазин Dily.ru</li>
+                        <li class="px-3 py-5 hover:bg-[#B3EECF] hover:border-b-2 hover:border-[#00C65E]">
+                            Интернет-магазин Dily.ru</li>
+                    </ul>
+                </div>
+                <div class="flex gap-5">
+                    <h1 class="text-gray-600 hidden lg:block"><i class="text-[#00C65E] fa-solid fa-location-arrow"></i>
+                        Москва <span><i class="text-black fa-solid fa-angle-down"></i></span></h1>
+                    <h1 class="font-semibold hidden lg:block"><i class="text-[#00C65E] fa-solid fa-user"></i> Вход/
+                        регистрация</h1>
+                    <div class="block lg:hidden">
+                        <i class="fa-solid fa-bars-staggered text-2xl"></i>
+                    </div>
+                </div>
+
+            </div>
+            <nav class="lg:bg-[#F7F7F7] lg:border-y-2 border-gray-200">
+                <div class=" flex max-w-[1200px] m-auto lg:justify-between justify-center px-5 py-4 items-center">
+                    <div class="lg:flex space-x-6 hidden">
+                        <h1 class="text-[#00C65E]"><i class="fa-solid fa-screwdriver-wrench"></i> Что мы чиним <i
+                                class="fa-solid fa-angle-right"></i></h1>
+                        <h1><i class="fa-solid fa-location-dot"></i> Адреса сервисов </h1>
+                    </div>
+                    <div class="rounded-full gap-0 flex text-gray-500 border-2 border-[#DADCDC] lg:border-none ">
+                        <div class="pl-7 py-1 rounded-tl-full rounded-bl-full bg-white space-x-3">
+                            <i class="fa-brands fa-searchengin"></i>
+                            <input type="text" placeholder="Я хочу купить">
+                        </div>
+                        <button
+                            class="px-4 py-1 bg-[#DADCDC] text-black font-medium rounded-tr-full rounded-br-full">Найти</button>
+                    </div>
+                    <button class="px-6 py-2 rounded-full bg-[#00C65E] text-white font-medium hidden lg:block">Узнать
+                        цену</button>
+                </div>
+            </nav>
+        </nav>
+
+        <div class="px-4 py-10" style="background-image: url(./Mimg/back.png);">
+
+            <section class="flex flex-col gap-8 max-w-7xl m-auto items-center justify-between lg:flex-row">
+                <aside class="text-center lg:text-left space-y-5">
+                    <h1 class="text-3xl font-bold">Просто решаем сложные проблемы</h1>
+                    <p class="pb-7 text-2xl font-normal">Производим ремонт любой сложности с<br class="hidden lg:block">
+                        гарантией. Оставьте заявку на ремонт<br class="hidden lg:block">
+                        прямо сейчас!</p>
+                    <div class="flex flex-col lg:flex-row gap-8">
+                        <button class="text-white text-lg px-[50px] py-2 bg-[#00C65E] rounded-xl w-full lg:w-fit">Оставить
+                            заявку</button>
+                        <button class="bg-white text-lg px-[50px] py-2 text-[#00C65E] rounded-xl w-full lg:w-fit">Оставить
+                            заявку</button>
+                    </div>
+                </aside>
+                <img src="./Mimg/image copy.png" alt="" class="lg:w-[40vw] lg:h-[50vh]">
+            </section>
+        </div>
+    </header>
+
+   
 </body>
+
 </html>
