--- a/src/sont.html
+++ b/src/sont.html
@@ -78,7 +78,29 @@
         </div>
     </header>
 
-   
+    <main>
+        <section
+            class="section1 flex justify-center gap-8 pb-16 w-[90%] max-w-[1200px] m-auto flex-col lg:flex-row items-center">
+            <article class="flex items-center gap-3 justify-center">
+                <h1 class="text-base font-medium">Быстро</h1>
+                <img src="./Mimg/image copy 2.png" alt="" class="w-[100px] h-[104px]">
+            </article>
+            <article class="flex items-center gap-3 flex-row-reverse lg:flex-row  justify-center">
+                <h1 class="text-base font-medium">С гарантией</h1>
+                <img src="./Mimg/image copy 3.png" alt="" class="w-[100px] h-[104px]">
+            </article>
+            <article class="flex items-center gap-3  justify-center">
+                <h1 class="text-base font-medium">Профессионально</h1>
+                <img src="./Mimg/image copy 4.png" alt="" class="w-[100px] h-[104px]">
+            </article>
+            <article class="flex items-center gap-3 flex-row-reverse lg:flex-row  justify-center">
+                <h1 class="text-base font-medium">Отличная цена</h1>
+                <img src="./Mimg/image copy 5.png" alt="" class="w-[100px] h-[104px]">
+            </article>
+        </section>
+
+        
+    </main>
 </body>
 
 </html>
