--- a/src/sont.html
+++ b/src/sont.html
@@ -99,7 +99,23 @@
             </article>
         </section>
 
-        
+        <section class="flex flex-col px-4 py-10 gap-8 max-w-7xl m-auto items-center justify-between">
+            <h1 class="text-2xl lg:text-5xl font-bold text-center">Мы ремонтируем</h1>
+            <div class="w-full grid grid-cols-3 gap-6 gap-y-10 lg:grid-cols-6">
+                <div class="p-4 shadow-lg"><img src="Mimg/image copy 6.png"  alt=""></div>
+                <div class="p-4 shadow-lg"><img src="Mimg/image copy 7.png"  alt=""></div>
+                <div class="p-4 shadow-lg"><img src="Mimg/image copy 8.png"  alt=""></div>
+                <div class="p-4 shadow-lg"><img src="Mimg/image copy 9.png"  alt=""></div>
+                <div class="p-4 shadow-lg"><img src="Mimg/image copy 10.png"  alt=""></div>
+                <div class="p-4 shadow-lg"><img src="Mimg/image copy 11.png"  alt=""></div>
+                <div class="p-4 shadow-lg"><img src="Mimg/image copy 12.png"  alt=""></div>
+                <div class="p-4 shadow-lg"><img src="Mimg/image copy 13.png"  alt=""></div>
+                <div class="p-4 shadow-lg"><img src="Mimg/image copy 14.png"  alt=""></div>
+                <div class="p-4 shadow-lg"><img src="Mimg/image copy 15.png"  alt=""></div>
+                <div class="p-4 shadow-lg"><img src="Mimg/image copy 16.png"  alt=""></div>
+                <div class="p-4 shadow-lg"><img src="Mimg/image copy 17.png"  alt=""></div>
+            </div>
+        </section>
     </main>
 </body>
 
